# academy

./: Dockerfile.vercel  README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  models.py
backend/app/middleware/: security.py
backend/app/routes/: academy_ext.py  alunos.py  auth.py  configuracoes.py  dashboard.py  exercicios.py  filiais.py  financeiro.py  grupos.py  logs.py  medidas.py  operacional.py  planos.py  referrals.py  treinadores.py  treinos.py  usuarios.py
backend/app/services/: audit.py  financeiro.py
backend/app/utils/: auth.py  jwt.py  passwords.py  serializers.py
backend/scripts/: create_admin.py
database/: 002_modulos_completos.sql  003_admin_padrao.sql  example_seed_company.sql  schema.sql  seed_permissions.sql
database/migrations/: 20260527_aluno_treinos.sql  20260528_operacional_crm.sql  20260529_dashboard_crm_referrals_billing.sql  20260705_configuracoes_integracoes.sql
docs/: flowgym-brand.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  academy-extras.css  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: DataTable.jsx  FormBuilder.jsx  MaskedInput.jsx  PermissionGate.jsx  ProtectedRoute.jsx  SearchableSelect.jsx  SectionCard.jsx
frontend/src/layouts/: AdminLayout.jsx
frontend/src/pages/: AlunoCadastroDetalhe.jsx  AlunoTreinosTab.jsx  Alunos.jsx  AutomacoesAcademia.jsx  CRM.jsx  Configuracoes.jsx  CrudPage.jsx  Dashboard.jsx  Financeiro.jsx  Grupos.jsx  Indicacoes.jsx  Integracoes.jsx  (+11 more)
nginx/: default.conf
(+2 files in other folders)
