[project]
name = "academy-backend"
version = "0.1.0"
description = "Backend Flask do sistema Academy"
requires-python = ">=3.12"

dependencies = [
    "Flask>=3.0.0",
    "flask-cors>=4.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-JWT-Extended>=4.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "Werkzeug>=3.0.0",
    "gunicorn>=21.2.0",

    # Banco PostgreSQL
    "psycopg2-binary>=2.9.9",

    # Banco MySQL, deixe somente se ainda usa MySQL em algum ambiente
    "PyMySQL>=1.1.0",

    # Segurança/senhas
    "bcrypt>=4.1.0",

    # Datas
    "python-dateutil>=2.9.0"
]

[tool.vercel]
entrypoint = "run:app"
